--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
