--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
     "eslint-config-xo": "^0.47.0",
+    "eslint-config-xo-typescript": "^8.0.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript-eslint": "^8.31.0",
+    "typescript-eslint-parser": "^21.0.2"
   }
 }
