--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "color-convert": "^3.0.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "latest",
