--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "color-convert": "^3.0.1",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "latest",
@@ -22,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
+    "spotify-preview-finder": "^2.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
