--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
-    "@react-spring/three": "^9.7.2",
-    "@react-three/fiber": "^8.17.10",
-    "@shadergradient/react": "^2.0.25",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
+    "@react-spring/three": "^9.7.2",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.2.0",
+    "@shadergradient/react": "^2.0.25",
     "@types/react-window": "^1.8.8",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "color-convert": "^3.0.1",
@@ -24,21 +25,21 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "three": "^0.164.1",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "spotify-preview-finder": "^2.1.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.164.1"
   },
   "devDependencies": {
-    "@types/three": "^0.164.0",
     "@eslint/config-helpers": "^0.2.1",
     "@eslint/js": "^9.25.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
     "@types/react-window-infinite-loader": "^1.0.9",
+    "@types/three": "^0.164.0",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.21",
