--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
+    "eslint-config-next": "15.5.3",
     "eslint-config-xo": "^0.47.0",
     "eslint-config-xo-typescript": "^8.0.0",
     "eslint-plugin-react": "^7.37.5",
